--- a/usuarios/templates/iniciar_sesion.html
+++ b/usuarios/templates/iniciar_sesion.html
@@ -1,11 +1,13 @@
 {% extends 'padre.html' %}
-
+{% block titulo %}
+    Iniciar Sesión
+{% endblock titulo %}
 {% block cambios1 %}
 <header class="py-5 bg-light border-bottom mb-4">
     <div class="container">
         <div class="text-center my-5">
-            <h1 class="fw-bolder">Inicia sesión</h1>
-            <p class="lead mb-0">Introduce tus datos para acceder a tu cuenta</p>
+            <h1 class="fw-bolder">Inicio de sesión</h1>
+            <p class="lead mb-0">Ingrese sus datos para acceder a su cuenta</p>
         </div>
     </div>
 </header>
@@ -16,12 +18,19 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="username">Nombre de usuario</label>
-                    <input type="text" name="username" id="username" class="form-control" required>
+                    <input type="text" name="username" id="username" class="form-control" maxlength="12" required>
+                    <small class="form-text text-muted">Máximo 12 caracteres.</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
-                    <input type="password" name="password" id="password" class="form-control" required>
+                    <input type="password" name="password" id="password" class="form-control" maxlength="8" required>
+                    <small class="form-text text-muted">Máximo 8 caracteres.</small>
                 </div>
+                {% if error %}
+                    <div class="alert alert-danger">
+                        {{ error }}
+                    </div>
+                {% endif %}
                 <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
             </form>
             <div class="text-center mt-3">
