--- a/usuarios/templates/navbar.html
+++ b/usuarios/templates/navbar.html
@@ -1,18 +1,15 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="{% url 'inicio' %}">La Bitacora</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Sobre nosotros</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'nuevo_usuario' %}">Iniciar Sesión/Registrarse</a></li>
-            </ul>
+    <div class="container d-flex justify-content-center">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link btn btn-primary mx-2" href="{% url 'inicio' %}">Inicio</a>
+            <a class="nav-item nav-link btn btn-secondary mx-2" href="{% url 'SobreNosotros' %}">Sobre nosotros</a>
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link btn btn-success mx-2" href="{% url 'perfil' %}">{{ Usuario.usuario }}</a>
+                <a class="nav-item nav-link btn btn-danger mx-2" href="{% url 'logout' %}">Cerrar Sesión</a>
+            {% else %}
+                <a class="nav-item nav-link btn btn-success mx-2" href="{% url 'nuevo_usuario' %}">Iniciar Sesión/Registrarse</a>
+            {% endif %}
         </div>
     </div>
 </nav>
