--- a/usuarios/templates/nuevo_usuario.html
+++ b/usuarios/templates/nuevo_usuario.html
@@ -1,11 +1,13 @@
 {% extends 'padre.html' %}
-
+{% block titulo %}
+    Registrarse
+{% endblock titulo %}
 {% block cambios1 %}
 <header class="py-5 bg-light border-bottom mb-4">
     <div class="container">
         <div class="text-center my-5">
             <h1 class="fw-bolder">Cree su usuario a continuación!</h1>
-            <!-- <p class="lead mb-0">Si ya está registrado, ingrese sus datos para iniciar sesión</p> -->
+            <p class="lead mb-0">Si ya está registrado, ingrese sus datos para iniciar sesión</p>
         </div>
     </div>
 </header>
@@ -21,9 +23,20 @@
                 </div>
                 <div class="form-group">
                     <label for="contrasenia">Contraseña</label>
-                    <input type="password" name="contrasenia" id="contrasenia" class="form-control" maxlength="8" required>
+                    <input type="password" name="contrasenia" id="contrasenia" class="form-control" maxlength="20" required>
                     <small class="form-text text-muted">Máximo 8 caracteres.</small>
                 </div>
+                {% if crear_usuario.errors %}
+                    <div class="alert alert-danger">
+                        <ul>
+                            {% for field in crear_usuario %}
+                                {% for error in field.errors %}
+                                    <li>{{ error }}</li>
+                                {% endfor %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
                 <button type="submit" class="btn btn-primary w-100">Enviar</button>
             </form>
             <div class="text-center mt-3">
