--- a/usuarios/templates/padre.html
+++ b/usuarios/templates/padre.html
@@ -55,10 +55,10 @@
                             <a class="btn btn-primary" href="#!">Leer más →</a>
                         </div>
                     </div>
-                    <!-- Nested row for non-featured blog posts-->
+                    Nested row for non-featured blog posts
                     <div class="row">
                         <div class="col-lg-6">
-                            <!-- Blog post-->
+                            Blog post
                             <div class="card mb-4">
                                 <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                                 <div class="card-body">
