--- a/usuarios/templates/navbar.html
+++ b/usuarios/templates/navbar.html
@@ -10,6 +10,7 @@
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'inicio' %}">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'SobreNosotros' %}">Sobre nosotros</a></li>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'crear_publicacion' %}">Nueva publicacion</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'nuevo_usuario' %}">Registrarse</a></li>
             </ul>
