--- a/usuarios/templates/padre.html
+++ b/usuarios/templates/padre.html
@@ -120,12 +120,14 @@
                 <div class="col-lg-4">
                     <!-- Search widget-->
                     <div class="card mb-4">
-                        <div class="card-header">Buscar</div>
+                        <div class="card-header">Buscar Profesional por apellido</div>
                         <div class="card-body">
-                            <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                            </div>
+                            <form method="GET" action="{% url 'buscar_profesionales' %}">
+                                <div class="input-group">
+                                    <input class="form-control" type="text" name="q" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" value="{{ request.GET.q }}">
+                                    <button class="btn btn-primary" id="button-search" type="submit">Buscar</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <!-- Categories widget-->
@@ -135,10 +137,10 @@
                             <div class="row">
                                 <div class="col">
                                     <ul class="list mb-0">
-                                        <li><a href="#!">Psicoanálisis</a></li>
-                                        <li><a href="#!">Clínica</a></li>
-                                        <li><a href="#!">Cognitivo-Conductual</a></li>
-                                        <li><a href="#!">Sistémica</a></li>
+                                        <li><a href="{% url 'psicoanalisis' %}">Psicoanálisis</a></li>
+                                        <li><a href="{% url 'clinica' %}">Clínica</a></li>
+                                        <li><a href="{% url 'cognitivoconductual' %}">Cognitivo-Conductual</a></li>
+                                        <li><a href="{% url 'sistemica' %}">Sistémica</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -146,8 +148,26 @@
                     </div>
                     <!-- Side widget-->
                     <div class="card mb-4">
-                        <div class="card-header">Side Widget</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                        <div class="card-header">Buscar Publicación por título</div>
+                        <div class="card-body">
+                            <form method="GET" action="{% url 'buscar_publicacion' %}">
+                                <div class="input-group">
+                                    <input class="form-control" type="text" name="q" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" value="{{ request.GET.q }}">
+                                    <button class="btn btn-primary" id="button-search" type="submit">Buscar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="card mb-4"></div>
+                        <div class="card-header">Buscar usuario por nombre</div>
+                        <div class="card-body">
+                            <form method="GET" action="{% url 'buscar_usuario' %}">
+                                <div class="input-group">
+                                    <input class="form-control" type="text" name="q" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" value="{{ request.GET.q }}">
+                                    <button class="btn btn-primary" id="button-search" type="submit">Buscar</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
