Se terminaron de corregir unos errores a la hora de crear nuevas publicaciones y se acomodaron detalles estéticos y de redacción

--- a/usuarios/templates/Sobre_nosotros.html
+++ b/usuarios/templates/Sobre_nosotros.html
@@ -12,8 +12,9 @@
             <div class="container text-center"></div>
                 <img class="lead mb-0" class="text-center my-5" src="{% static 'assets/images/psicologia.png' %}" alt="Sobre Nosotros" class="img-fluid my-4">
             </div>
-            <p class="lead mb-0">La Bitacora es una propuesta psicológica que intenta acercar a los profesionales de distintas corrientes para motivar el intercambio y la profundización sobre la salud mental.</p>
-            <p class="lead mb-0">Pero para poder ordenar el contenido se propone la división, solo a fines prácticos, de las diferentes corrientes.</p>
+            <p class="lead mb-0">La Bitacora es una propuesta psicológica que intenta acercar a los profesionales de distintas corrientes para motivar el intercambio y la profundización sobre la salud mental, a través de la publicacion de diferentes articulos de interés.</p>
+            <p class="lead mb-0">A su vez, la busqueda constante será poder acercar a dichos profesionales con aquellas personas que necesiten de ayuda psicologica, encontrando aquí un espacio para comenzar ese proceso.</p>
+            <p class="lead mb-0">Para ello, proponemos que exista una seccion de profesionales, donde las personas, luego de registrarse, podrán obtener los datos de contacto para comunicarse con ellos.</p>
             <p class="lead mb-0">El buen trato y el respeto harán de este espacio un lugar propicio para el intercambio, fomentando así los valores que diariamente proponemos en nuestra labor, con el horizonte puesto en el ejercicio Ético de la profesión.</p>
         </div>
     </div>
