--- a/usuarios/templates/lista_profesionales.html
+++ b/usuarios/templates/lista_profesionales.html
@@ -10,7 +10,7 @@
   <ul>
     {% for perfil in perfiles %}
       <li>
-        Nombre y apellido: {{ perfil.nombre }} {{ perfil.apellido }} - Email: {{ perfil.email }} - Biografía: {{ perfil.biografia }}
+        Nombre y apellido: {{ perfil.nombre }} {{ perfil.apellido }} - Matrícula: {{perfil.matricula}} - Email: {{ perfil.email }} - Biografía: {{ perfil.biografia }}
       </li>
     {% endfor %}
   </ul>
