--- a/publicaciones/templates/crear_publicacion.html
+++ b/publicaciones/templates/crear_publicacion.html
@@ -17,11 +17,15 @@
             <form action="{% url 'publicacioncreada' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="nombre">Titulo</label>
+                    <label for="titulo">Titulo</label>
                     <input type="text" name="nombre" id="nombre" class="form-control" maxlength="100" required>
                 </div>
                 <div class="form-group">
-                    <label for="apellido">Categoría</label>
+                    <label for="categoria">Categoría</label>
+                    <input type="text" name="categoria" id="categoria" class="form-control" maxlength="100" required>
+                </div>
+                <div class="form-group">
+                    <label for="apellido">Apellido</label>
                     <input type="text" name="apellido" id="apellido" class="form-control" maxlength="100" required>
                 </div>
                 <div class="form-group">
