--- a/publicaciones/templates/publicacioncreada.html
+++ b/publicaciones/templates/publicacioncreada.html
@@ -8,8 +8,8 @@
 <header class="py-5 bg-light border-bottom mb-4">
     <div class="container">
         <div class="text-center my-5">
-            <h1 class="fw-bolder">Woow!</h1>
-            <p class="lead mb-0">Su publicación ha sido creada con éxito!</p>
+            <h1 class="fw-bolder">Éxito!</h1>
+            <p class="lead mb-0">Su publicación ha sido creada!</p>
                 <ul class="list mb-0">
                     <li><a href="{% url 'inicio' %}">Inicio</a></li>
                     <li><a href="{% url 'crear_publicacion' %}">Nueva publicacion</a></li>
