--- a/usuarios/templates/Post_inicio_sesion.html
+++ b/usuarios/templates/Post_inicio_sesion.html
@@ -10,7 +10,7 @@
         <div class="col-md-4">
             <div class="card text-center mb-4">
                 <div class="card-body">
-                    <h5 class="card-title">Primera vez? Completa tu perfil</h5>
+                    <h5 class="card-title">Sos profesional? Primera vez? Completa tu perfil</h5>
                     <a href="{% url 'crear_perfil' %}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
@@ -20,6 +20,14 @@
                 <div class="card-body">
                     <h5 class="card-title">Crear una nueva publicación</h5>
                     <a href="{% url 'crear_publicacion' %}" class="btn btn-primary">Ir</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card text-center mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Inicio</h5>
+                    <a href="{% url 'inicio' %}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
         </div>
