--- a/usuarios/templates/crear_perfil.html
+++ b/usuarios/templates/crear_perfil.html
@@ -25,6 +25,10 @@
                     <input type="text" name="apellido" id="apellido" class="form-control" maxlength="100" required>
                 </div>
                 <div class="form-group">
+                    <label for="matricula">Matrícula</label>
+                    <input type="text" name="matricula" id="matricula" class="form-control" maxlength="100" required>
+                </div>
+                <div class="form-group">
                     <label for="email">Correo Electrónico</label>
                     <input type="email" name="email" id="email" class="form-control" required>
                 </div>
