--- a/usuarios/templates/nuevo_usuario.html
+++ b/usuarios/templates/nuevo_usuario.html
@@ -26,6 +26,10 @@
                     <input type="password" name="contrasenia" id="contrasenia" class="form-control" maxlength="20" required>
                     <small class="form-text text-muted">Máximo 8 caracteres.</small>
                 </div>
+                <div class="form-check">
+                    <input type="checkbox" name="profesional" id="profesional" class="form-check-input">
+                    <label class="form-check-label" for="profesional">¿Eres profesional de la salud?</label>
+                </div>
                 {% if crear_usuario.errors %}
                     <div class="alert alert-danger">
                         <ul>
