Se terminaron de definir algunos componentes de las busquedas en la pantalla de inicio y se agregó una linea en el readme.

--- a/publicaciones/templates/buscar_publicacion.html
+++ b/publicaciones/templates/buscar_publicacion.html
@@ -2,12 +2,12 @@
 
 {% block cambios1 %}
   
-  <p>Busqueda: {{titulo}}</p>
+<h3>Lista de publicaciones</h3>
 
   
-  {% if titulo%}
+  {% if publicaciones%}
     <ul>
-      {% for titulo in publicacion %}
+      {% for publicacion in publicaciones %}
         <li>{{publicacion.titulo}} - {{publicacion.categoria}} - {{publicacion.texto}}</li>
       {% endfor %}
     </ul>
