--- a/usuarios/templates/padre.html
+++ b/usuarios/templates/padre.html
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="card mb-4">
-                        <div class="card-header">Buscar usuario por nombre</div>
+                        <div class="card-header">Buscar Usuario por nombre de usuario</div>
                         <div class="card-body">
                             <form method="GET" action="{% url 'buscar_usuario' %}">
                                 <div class="input-group">
