--- a/usuarios/templates/crear_perfil.html
+++ b/usuarios/templates/crear_perfil.html
@@ -25,7 +25,7 @@
                     <input type="text" name="apellido" id="apellido" class="form-control" maxlength="100" required>
                 </div>
                 <div class="form-group">
-                    <label for="matricula">Matrícula</label>
+                    <label for="matricula">Matrícula (solo si te has registrado como profesional)</label>
                     <input type="text" name="matricula" id="matricula" class="form-control" maxlength="100" required>
                 </div>
                 <div class="form-group">
